// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LargeStreakCard should render 1`] = `
<View
  accessibilityLabel="large-streak-card-container"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="large-streak-card-container"
>
  <View
    style={
      Object {
        "paddingBottom": 4,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "elevation": 3,
            "shadowColor": "#262C2F",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
          },
          Object {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "flexDirection": "column",
            "justifyContent": "space-between",
            "paddingBottom": 20,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 20,
          },
          Object {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomLeftRadius": 8,
              "borderBottomRightRadius": 8,
              "borderTopLeftRadius": 8,
              "borderTopRightRadius": 8,
              "paddingBottom": 20,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
              "width": "100%",
            },
            false,
          ]
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <View>
            <CMIFColorMatrixImageFilter
              matrix={
                Array [
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  1,
                  0,
                ]
              }
              style={
                Array [
                  Object {
                    "backgroundColor": "#fff0",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 60,
                      "width": 60,
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Object {
                        "alignItems": "center",
                        "borderBottomLeftRadius": 60,
                        "borderBottomRightRadius": 60,
                        "borderTopLeftRadius": 60,
                        "borderTopRightRadius": 60,
                        "height": "100%",
                        "justifyContent": "center",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <FastImageView
                    accessibilityLabel="brand-logo-image"
                    accessible={true}
                    onFastImageError={[Function]}
                    onFastImageLoad={[Function]}
                    onFastImageLoadEnd={[Function]}
                    onFastImageLoadStart={[Function]}
                    resizeMode="cover"
                    source={
                      Object {
                        "priority": "high",
                        "uri": "https://i.sears.com/s/i/or/SYW-MAX/Brands_Sam's-club-Logos-SYW-MAX_H5YHQFPMCT",
                      }
                    }
                    style={
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                    testID="brand-logo-image"
                  />
                </View>
              </View>
            </CMIFColorMatrixImageFilter>
          </View>
          <View
            style={
              Object {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "marginLeft": 24,
              }
            }
          >
            <Text
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#909BA0",
                    "fontFamily": "SFProDisplay-Medium",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#262C2F",
                    "fontFamily": "SFProDisplay-Bold",
                    "fontSize": 16,
                  },
                ]
              }
            >
              Grocery & Delivery Streak
            </Text>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginTop": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "marginRight": 4,
                    }
                  }
                >
                  <Text
                    accessibilityLabel="icon-text"
                    accessible={true}
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#0066CC",
                          "fontSize": 22,
                        },
                        undefined,
                        Object {
                          "fontFamily": "sywmax",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="icon-text"
                  >
                    
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "marginRight": 4,
                    }
                  }
                >
                  <Text
                    accessibilityLabel="icon-text"
                    accessible={true}
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#909BA0",
                          "fontSize": 22,
                        },
                        undefined,
                        Object {
                          "fontFamily": "sywmax",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="icon-text"
                  >
                    
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "marginRight": 4,
                    }
                  }
                >
                  <Text
                    accessibilityLabel="icon-text"
                    accessible={true}
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#909BA0",
                          "fontSize": 22,
                        },
                        undefined,
                        Object {
                          "fontFamily": "sywmax",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="icon-text"
                  >
                    
                  </Text>
                </View>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#909BA0",
                      "fontFamily": "SFProDisplay-Medium",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#909BA0",
                      "fontFamily": "SFProDisplay-Medium",
                      "fontSize": 14,
                    },
                  ]
                }
              >
                1
                /
                3
                 purchases
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginTop": 16,
                }
              }
            >
              <View
                accessibilityLabel="pill-container"
                accessible={true}
                style={
                  Array [
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#DDE8F5",
                        "borderBottomLeftRadius": 20,
                        "borderBottomRightRadius": 20,
                        "borderTopLeftRadius": 20,
                        "borderTopRightRadius": 20,
                        "flexDirection": "row",
                        "paddingLeft": 4,
                        "paddingRight": 10,
                      },
                      Object {
                        "height": 28,
                      },
                    ],
                    Array [
                      undefined,
                    ],
                    undefined,
                  ]
                }
                testID="pill-container"
              >
                <View
                  accessibilityLabel="pill-icon"
                  accessible={true}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderBottomLeftRadius": 50,
                        "borderBottomRightRadius": 50,
                        "borderTopLeftRadius": 50,
                        "borderTopRightRadius": 50,
                        "justifyContent": "center",
                      },
                      undefined,
                    ]
                  }
                  testID="pill-icon"
                >
                  <Text
                    accessibilityLabel="icon-text"
                    accessible={true}
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#0066CC",
                          "fontSize": 20,
                        },
                        undefined,
                        Object {
                          "fontFamily": "sywmax",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="icon-text"
                  >
                    
                  </Text>
                </View>
                <Text
                  accessibilityLabel="pill-text"
                  accessible={true}
                  style={
                    Array [
                      Object {
                        "color": "#909BA0",
                        "fontFamily": "SFProDisplay-Medium",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                      Array [
                        Object {
                          "paddingLeft": 4,
                        },
                        Array [
                          Object {
                            "color": "#0066CC",
                            "fontFamily": "SFProDisplay-Bold",
                            "fontSize": 14,
                          },
                          Object {
                            "lineHeight": 20,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                  testID="pill-text"
                >
                  +3,000
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#909BA0",
                      "fontFamily": "SFProDisplay-Medium",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#909BA0",
                      "fontFamily": "SFProDisplay-Medium",
                      "fontSize": 14,
                    },
                  ]
                }
              >
                51 years
                 left
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`LargeStreakCard should render complete 1`] = `
<View
  accessibilityLabel="large-streak-card-container"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="large-streak-card-container"
>
  <View
    style={
      Object {
        "paddingBottom": 4,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "elevation": 3,
            "shadowColor": "#262C2F",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
          },
          Object {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "flexDirection": "column",
            "justifyContent": "space-between",
            "paddingBottom": 20,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 20,
          },
          Object {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomLeftRadius": 8,
              "borderBottomRightRadius": 8,
              "borderTopLeftRadius": 8,
              "borderTopRightRadius": 8,
              "paddingBottom": 20,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
              "width": "100%",
            },
            Object {
              "backgroundColor": "#EBEDF2",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <View>
            <CMIFColorMatrixImageFilter
              matrix={
                Array [
                  0.2126,
                  0.7152,
                  0.0722,
                  0,
                  0,
                  0.2126,
                  0.7152,
                  0.0722,
                  0,
                  0,
                  0.2126,
                  0.7152,
                  0.0722,
                  0,
                  0,
                  0,
                  0,
                  0,
                  1,
                  0,
                ]
              }
              style={
                Array [
                  Object {
                    "backgroundColor": "#fff0",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 60,
                      "width": 60,
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Object {
                        "alignItems": "center",
                        "borderBottomLeftRadius": 60,
                        "borderBottomRightRadius": 60,
                        "borderTopLeftRadius": 60,
                        "borderTopRightRadius": 60,
                        "height": "100%",
                        "justifyContent": "center",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <FastImageView
                    accessibilityLabel="brand-logo-image"
                    accessible={true}
                    onFastImageError={[Function]}
                    onFastImageLoad={[Function]}
                    onFastImageLoadEnd={[Function]}
                    onFastImageLoadStart={[Function]}
                    resizeMode="cover"
                    source={
                      Object {
                        "priority": "high",
                        "uri": "https://i.sears.com/s/i/or/SYW-MAX/Brands_Sam's-club-Logos-SYW-MAX_H5YHQFPMCT",
                      }
                    }
                    style={
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                    testID="brand-logo-image"
                  />
                </View>
              </View>
            </CMIFColorMatrixImageFilter>
          </View>
          <View
            style={
              Object {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "marginLeft": 24,
              }
            }
          >
            <Text
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#909BA0",
                    "fontFamily": "SFProDisplay-Medium",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#262C2F",
                    "fontFamily": "SFProDisplay-Bold",
                    "fontSize": 16,
                  },
                ]
              }
            >
              Grocery & Delivery Streak
            </Text>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginTop": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "marginRight": 4,
                    }
                  }
                >
                  <Text
                    accessibilityLabel="icon-text"
                    accessible={true}
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#0066CC",
                          "fontSize": 22,
                        },
                        undefined,
                        Object {
                          "fontFamily": "sywmax",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="icon-text"
                  >
                    
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "marginRight": 4,
                    }
                  }
                >
                  <Text
                    accessibilityLabel="icon-text"
                    accessible={true}
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#0066CC",
                          "fontSize": 22,
                        },
                        undefined,
                        Object {
                          "fontFamily": "sywmax",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="icon-text"
                  >
                    
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "marginRight": 4,
                    }
                  }
                >
                  <Text
                    accessibilityLabel="icon-text"
                    accessible={true}
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#0066CC",
                          "fontSize": 22,
                        },
                        undefined,
                        Object {
                          "fontFamily": "sywmax",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="icon-text"
                  >
                    
                  </Text>
                </View>
              </View>
              <Text
                accessibilityLabel="large-streak-card-complete"
                accessible={true}
                style={
                  Array [
                    Object {
                      "color": "#909BA0",
                      "fontFamily": "SFProDisplay-Medium",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#0066CC",
                      "fontFamily": "SFProDisplay-Medium",
                      "fontSize": 14,
                    },
                  ]
                }
                testID="large-streak-card-complete"
              >
                Completed!
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginTop": 16,
                }
              }
            >
              <View />
              <Text
                style={
                  Array [
                    Object {
                      "color": "#909BA0",
                      "fontFamily": "SFProDisplay-Medium",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#909BA0",
                      "fontFamily": "SFProDisplay-Medium",
                      "fontSize": 14,
                    },
                  ]
                }
              >
                Starts again in 
                51 years
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`LargeStreakCard should render with ended streak 1`] = `
<View
  accessibilityLabel="large-streak-card-container"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="large-streak-card-container"
>
  <View
    style={
      Object {
        "paddingBottom": 4,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "elevation": 3,
            "shadowColor": "#262C2F",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
          },
          Object {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "flexDirection": "column",
            "justifyContent": "space-between",
            "paddingBottom": 20,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 20,
          },
          Object {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomLeftRadius": 8,
              "borderBottomRightRadius": 8,
              "borderTopLeftRadius": 8,
              "borderTopRightRadius": 8,
              "paddingBottom": 20,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
              "width": "100%",
            },
            Object {
              "backgroundColor": "#EBEDF2",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <View>
            <CMIFColorMatrixImageFilter
              matrix={
                Array [
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                  1,
                  0,
                ]
              }
              style={
                Array [
                  Object {
                    "backgroundColor": "#fff0",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 60,
                      "width": 60,
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Object {
                        "alignItems": "center",
                        "borderBottomLeftRadius": 60,
                        "borderBottomRightRadius": 60,
                        "borderTopLeftRadius": 60,
                        "borderTopRightRadius": 60,
                        "height": "100%",
                        "justifyContent": "center",
                        "width": "100%",
                      },
                    ]
                  }
                >
                  <FastImageView
                    accessibilityLabel="brand-logo-image"
                    accessible={true}
                    onFastImageError={[Function]}
                    onFastImageLoad={[Function]}
                    onFastImageLoadEnd={[Function]}
                    onFastImageLoadStart={[Function]}
                    resizeMode="cover"
                    source={
                      Object {
                        "priority": "high",
                        "uri": "https://i.sears.com/s/i/or/SYW-MAX/Brands_Sam's-club-Logos-SYW-MAX_H5YHQFPMCT",
                      }
                    }
                    style={
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      }
                    }
                    testID="brand-logo-image"
                  />
                </View>
              </View>
            </CMIFColorMatrixImageFilter>
          </View>
          <View
            style={
              Object {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "marginLeft": 24,
              }
            }
          >
            <Text
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#909BA0",
                    "fontFamily": "SFProDisplay-Medium",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#262C2F",
                    "fontFamily": "SFProDisplay-Bold",
                    "fontSize": 16,
                  },
                ]
              }
            >
              Grocery & Delivery Streak
            </Text>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginTop": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "marginRight": 4,
                    }
                  }
                >
                  <Text
                    accessibilityLabel="icon-text"
                    accessible={true}
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#0066CC",
                          "fontSize": 22,
                        },
                        undefined,
                        Object {
                          "fontFamily": "sywmax",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="icon-text"
                  >
                    
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "marginRight": 4,
                    }
                  }
                >
                  <Text
                    accessibilityLabel="icon-text"
                    accessible={true}
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#909BA0",
                          "fontSize": 22,
                        },
                        undefined,
                        Object {
                          "fontFamily": "sywmax",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="icon-text"
                  >
                    
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "marginRight": 4,
                    }
                  }
                >
                  <Text
                    accessibilityLabel="icon-text"
                    accessible={true}
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#909BA0",
                          "fontSize": 22,
                        },
                        undefined,
                        Object {
                          "fontFamily": "sywmax",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="icon-text"
                  >
                    
                  </Text>
                </View>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#909BA0",
                      "fontFamily": "SFProDisplay-Medium",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#909BA0",
                      "fontFamily": "SFProDisplay-Medium",
                      "fontSize": 14,
                    },
                  ]
                }
              >
                1
                /
                3
                 purchases
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityLabel="large-streak-card-ended"
          accessible={true}
          style={
            Object {
              "marginBottom": 0,
              "marginLeft": 20,
              "marginRight": 20,
              "marginTop": 24,
            }
          }
          testID="large-streak-card-ended"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#909BA0",
                  "fontFamily": "SFProDisplay-Medium",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#909BA0",
                  "fontFamily": "SFProDisplay-Medium",
                  "fontSize": 14,
                },
              ]
            }
          >
            Mission has ended. New mission coming soon!
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
